_includes/manuals/3.2/2.1_quickstart_installation.md
[The Foreman installer](/manuals/{{page.version}}/index.html#3.2ForemanInstaller) uses Puppet **(6 or later required)** to install Foreman. This guide assumes that you have a newly installed operating system, on which the installer will setup Foreman, a Puppet server, and the [Smart Proxy](/manuals/{{page.version}}/index.html#4.3SmartProxies) by default. It's **not advisable** to follow the steps below on an existing system, since the installer will affect the configuration of several components.

<div class="alert alert-info">

If you want to manage content (for example, RPMs, Kickstart trees, ISO and KVM images, OSTree content, and more) with Foreman please follow the  <a href="https://theforeman.org/plugins/katello/">Katello</a> installation instructions. If you are a new user, ensure that you familiarize yourself with  <a href="https://theforeman.org/plugins/katello/">Katello</a> and decide whether you want to use its features because installing Katello on top of an existing Foreman is unsupported. Note that you cannot install Katello on Debian systems.

</div>


#### Select operating system

<script type="text/javascript">
function update_quickstart_os(select) {
  var os = select.value;
  $(".quickstart_os").hide();
  if (os && os != 'none') {
    $(".quickstart_os_"+os).show();
  } else {
    $(".quickstart_os_none").show();
  }
}
</script>

To provide specific installation instructions, please select your operating system:
<select onChange="update_quickstart_os(this);">
  <option value="none">-- select operating system --</option>
  <option value="centos7">CentOS 7</option>
  <option value="el8">CentOS 8</option>
  <option value="el8">CentOS 8 Stream</option>
  <option value="other_el7">Scientific Linux or Oracle Linux 7</option>
  <option value="debian10">Debian 10 (Buster)</option>
  <option value="debian11">Debian 11 (Bullseye)</option>
  <option value="rhel7">Red Hat Enterprise Linux 7</option>
  <option value="rhel8">Red Hat Enterprise Linux 8</option>
  <option value="ubuntu2004">Ubuntu 20.04 (Focal)</option>
</select>

#### Repositories

<div class="quickstart_os quickstart_os_none">
  <i>No operating system selected.</i>
</div>

<div class="quickstart_os quickstart_os_rhel7">
  <p>First, enable the RHEL Optional and SCL repositories:</p>

{% highlight bash %}
sudo yum-config-manager --enable rhel-7-server-optional-rpms rhel-server-rhscl-7-rpms
{% endhighlight %}

  <p>
    Check the repositories are enabled with <code>yum repolist</code> after running the above command, as it can silently fail when subscription does not provide those.
  </p>
</div>

<div class="quickstart_os quickstart_os_rhel7 quickstart_os_other_el7 quickstart_os_centos7">
  <p>
    <b>Note:</b> The RPM packages are not tested on Scientific Linux or Oracle Linux. The Foreman installation on Scientific Linux or Oracle Linux may or may not work.
  </p>

  <p>
    Enable Puppet's 7.x repository:
  </p>

{% highlight bash %}
sudo yum -y install https://yum.puppet.com/puppet7-release-el-7.noarch.rpm
{% endhighlight %}
</div>

<div class="quickstart_os quickstart_os_rhel8 quickstart_os_el8">
  <p>
    Enable Puppet's 7.x repository:
  </p>

{% highlight bash %}
sudo yum -y install https://yum.puppet.com/puppet7-release-el-8.noarch.rpm
{% endhighlight %}
</div>

<div class="quickstart_os quickstart_os_rhel7">
  <p>Enable the EPEL (Extra Packages for Enterprise Linux) and the Foreman repositories:</p>

{% highlight bash %}
sudo yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
sudo yum -y install https://yum.theforeman.org/releases/{{page.version}}/el7/x86_64/foreman-release.rpm
{% endhighlight %}
</div>

<div class="quickstart_os quickstart_os_centos7">
  <p>Enable the EPEL (Extra Packages for Enterprise Linux), Foreman and SCL (Software Collections) repositories:</p>

{% highlight bash %}
sudo yum-config-manager --enable extras
sudo yum -y install epel-release centos-release-scl-rh
sudo yum -y install https://yum.theforeman.org/releases/{{page.version}}/el7/x86_64/foreman-release.rpm
{% endhighlight %}

</div>

<div class="quickstart_os quickstart_os_other_el7">
  <p>Enable the EPEL (Extra Packages for Enterprise Linux), Foreman and SCL (Software Collections) repositories:</p>

{% highlight bash %}
sudo yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
sudo yum -y install https://yum.theforeman.org/releases/{{page.version}}/el7/x86_64/foreman-release.rpm
sudo yum -y install https://mirror.centos.org/centos/7/extras/x86_64/Packages/centos-release-scl-rh-2-3.el7.centos.noarch.rpm
{% endhighlight %}

</div>

<div class="quickstart_os quickstart_os_rhel8 quickstart_os_el8">
  <p>Enable the Ruby 2.7 module:</p>

{% highlight bash %}
sudo dnf -y module reset ruby
sudo dnf -y module enable ruby:2.7
{% endhighlight %}
</div>

<div class="quickstart_os quickstart_os_rhel8 quickstart_os_el8">
  <p>Enable the Foreman repositories:</p>

{% highlight bash %}
sudo yum -y install https://yum.theforeman.org/releases/{{page.version}}/el8/x86_64/foreman-release.rpm
{% endhighlight %}
</div>

<div class="quickstart_os quickstart_os_debian10">
  <p>
    Enable Puppet's 7.x repository:
  </p>

{% highlight bash %}
sudo apt-get -y install ca-certificates
cd /tmp && wget https://apt.puppet.com/puppet7-release-buster.deb
sudo apt-get install /tmp/puppet7-release-buster.deb
{% endhighlight %}

  <p>Enable the Foreman repositories:</p>

{% highlight bash %}
sudo wget https://deb.theforeman.org/foreman.asc -O /etc/apt/trusted.gpg.d/foreman.asc
echo "deb http://deb.theforeman.org/ buster {{page.version}}" | sudo tee /etc/apt/sources.list.d/foreman.list
echo "deb http://deb.theforeman.org/ plugins {{page.version}}" | sudo tee -a /etc/apt/sources.list.d/foreman.list
{% endhighlight %}
</div>

<div class="quickstart_os quickstart_os_debian11">
  <p>
    Enable Puppet's 7.x repository:
  </p>

{% highlight bash %}
sudo apt-get -y install ca-certificates
cd /tmp && wget https://apt.puppet.com/puppet7-release-bullseye.deb
sudo apt-get install /tmp/puppet7-release-bullseye.deb
{% endhighlight %}

  <p>Enable the Foreman repositories:</p>

{% highlight bash %}
sudo wget https://deb.theforeman.org/foreman.asc -O /etc/apt/trusted.gpg.d/foreman.asc
echo "deb http://deb.theforeman.org/ bullseye {{page.version}}" | sudo tee /etc/apt/sources.list.d/foreman.list
echo "deb http://deb.theforeman.org/ plugins {{page.version}}" | sudo tee -a /etc/apt/sources.list.d/foreman.list
{% endhighlight %}
</div>

<div class="quickstart_os quickstart_os_ubuntu2004">
  <p>
    Enable Puppet's 7.x repository:
  </p>

{% highlight bash %}
sudo apt-get -y install ca-certificates
cd /tmp && wget https://apt.puppet.com/puppet7-release-focal.deb
sudo apt-get install /tmp/puppet7-release-focal.deb
{% endhighlight %}

  <p>Enable the Foreman repositories:</p>

{% highlight bash %}
sudo wget https://deb.theforeman.org/foreman.asc -O /etc/apt/trusted.gpg.d/foreman.asc
echo "deb http://deb.theforeman.org/ focal {{page.version}}" | sudo tee /etc/apt/sources.list.d/foreman.list
echo "deb http://deb.theforeman.org/ plugins {{page.version}}" | sudo tee -a /etc/apt/sources.list.d/foreman.list
{% endhighlight %}
</div>

#### Downloading the installer

<div class="quickstart_os quickstart_os_none">
  <i>No operating system selected.</i>
</div>

<div class="quickstart_os quickstart_os_rhel7 quickstart_os_el7 quickstart_os_centos7 other_el7 quickstart_os_rhel8 quickstart_os_el8">
{% highlight bash %}
sudo yum -y install foreman-installer
{% endhighlight %}
</div>

<div class="quickstart_os quickstart_os_debian10 quickstart_os_debian11 quickstart_os_ubuntu2004">
{% highlight bash %}
sudo apt-get update && sudo apt-get -y install foreman-installer
{% endhighlight %}
</div>

#### Running the installer

<div class="quickstart_os quickstart_os_debian10 quickstart_os_debian11 quickstart_os_ubuntu2004 alert alert-info">
  Ensure that <code>ping $(hostname -f)</code> shows the real IP address, not 127.0.1.1.  Change or remove this entry from /etc/hosts if present.
</div>

The installation run is non-interactive, but the configuration can be customized by supplying any of the options listed in `foreman-installer --help`, or by running `foreman-installer -i` for interactive mode.  More examples are given in the [Installation Options](/manuals/{{page.version}}/index.html#3.2.2InstallerOptions) section.  Adding `-v` will disable the progress bar and display all changes.  To run the installer, execute:

<div class="quickstart_os quickstart_os_none quickstart_os_el7 quickstart_os_rhel7 quickstart_os_debian10 quickstart_os_debian11 quickstart_os_ubuntu2004 quickstart_os_el8 quickstart_os_rhel8">
{% highlight bash %}
sudo foreman-installer
{% endhighlight %}
</div>

After it completes, the installer will print some details about where to find Foreman and the Smart Proxy. Output should be similar to this:

{% highlight bash %}
  * Foreman is running at https://theforeman.example.com
      Initial credentials are admin / 3ekw5xtyXCoXxS29
  * Foreman Proxy is running at https://theforeman.example.com:8443
  The full log is at /var/log/foreman-installer/foreman-installer.log
{% endhighlight %}

#### Next-generation documentation

Over the last year, Foreman community members have been open-sourcing Red Hat documentation to make more comprehensive guides available to Foreman users. At the moment, the following guides have been migrated to a work-in-progress [Foreman and Katello documentation site](https://docs.theforeman.org). This project is not yet complete, but you might find useful information in some of the following guides:

* [Provisioning Guide](https://docs.theforeman.org/master/Provisioning_Guide/index-foreman.html)
* [Administering Foreman Guide](https://docs.theforeman.org/master/Administering_Red_Hat_Satellite/index-foreman.html)
* [Managing Hosts Guide](https://docs.theforeman.org/master/Managing_Hosts/index-foreman.html)
* [Content Management Guide](https://docs.theforeman.org/master/Content_Management_Guide/index-foreman.html)
* [Configuring Smart Proxies with a Load Balancer](https://docs.theforeman.org/master/Configuring_Load_Balancer/index-foreman.html)
