_includes/manuals/5.0/2.1_quickstart_installation.md
[The Foreman installer](/manuals/{{page.version}}/index.html#3.2ForemanInstaller) uses OpenVox **(8 or later required)** to install Foreman. This guide assumes that you have a newly installed operating system, on which the installer will setup Foreman, a OpenVox server, and the [Smart Proxy](/manuals/{{page.version}}/index.html#4.3SmartProxies) by default. It's **not advisable** to follow the steps below on an existing system, since the installer will affect the configuration of several components.

<div class="alert alert-info">

If you want to manage content (for example, RPMs, Kickstart trees, ISO and KVM images, OSTree content, and more) with Foreman please follow the  <a href="https://theforeman.org/plugins/katello/">Katello</a> installation instructions. If you are a new user, ensure that you familiarize yourself with  <a href="https://theforeman.org/plugins/katello/">Katello</a> and decide whether you want to use its features because installing Katello on top of an existing Foreman is unsupported. Note that you cannot install Katello on Debian systems.

</div>


#### Select operating system

<script type="text/javascript">
function update_quickstart_os(select) {
  var os = select.value;
  $(".quickstart_os").hide();
  if (os && os != 'none') {
    $(".quickstart_os_"+os).show();
  } else {
    $(".quickstart_os_none").show();
  }
}
</script>

To provide specific installation instructions, please select your operating system:
<select onChange="update_quickstart_os(this);">
  <option value="none">-- select operating system --</option>
  <option value="el9">Enterprise Linux 9</option>
  <option value="debian12">Debian 12 (Bookworm)</option>
  <option value="debian13">Debian 13 (Trixie)</option>
  <option value="ubuntu2204">Ubuntu 22.04 (Jammy)</option>
  <option value="ubuntu2404">Ubuntu 24.04 (Noble)</option>
</select>

#### Repositories

<div class="quickstart_os quickstart_os_none">
  <i>No operating system selected.</i>
</div>

<div class="quickstart_os quickstart_os_el9">
  <p>
    Enable OpenVox's 8.x repository:
  </p>

{% highlight bash %}
sudo dnf -y install https://yum.voxpupuli.org/openvox8-release-el-9.noarch.rpm
{% endhighlight %}
</div>

<div class="quickstart_os quickstart_os_el9">
  <p>Enable the Foreman repositories:</p>

{% highlight bash %}
sudo dnf -y install https://yum.theforeman.org/releases/{{page.version}}/el9/x86_64/foreman-release.rpm
{% endhighlight %}
</div>

<div class="quickstart_os quickstart_os_debian12">
  <p>
    Enable OpenVox's 8.x repository:
  </p>

{% highlight bash %}
sudo apt-get -y install ca-certificates
cd /tmp && wget https://apt.voxpupuli.org/openvox8-release-debian12.deb
sudo apt-get install /tmp/openvox8-release-debian12.deb
{% endhighlight %}

  <p>Enable the Foreman repositories:</p>

{% highlight bash %}
sudo wget https://deb.theforeman.org/foreman.asc -O /etc/apt/trusted.gpg.d/foreman.asc
echo "deb http://deb.theforeman.org/ bookworm {{page.version}}" | sudo tee /etc/apt/sources.list.d/foreman.list
echo "deb http://deb.theforeman.org/ plugins {{page.version}}" | sudo tee -a /etc/apt/sources.list.d/foreman.list
{% endhighlight %}
</div>

<div class="quickstart_os quickstart_os_debian13">
  <p>
    Enable OpenVox's 8.x repository:
  </p>

{% highlight bash %}
sudo apt-get -y install ca-certificates
cd /tmp && wget https://apt.voxpupuli.org/openvox8-release-debian13.deb
sudo apt-get install /tmp/openvox8-release-debian13.deb
{% endhighlight %}

  <p>Enable the Foreman repositories:</p>

{% highlight bash %}
sudo wget https://deb.theforeman.org/foreman.asc -O /etc/apt/trusted.gpg.d/foreman.asc
echo "deb http://deb.theforeman.org/ trixie {{page.version}}" | sudo tee /etc/apt/sources.list.d/foreman.list
echo "deb http://deb.theforeman.org/ plugins {{page.version}}" | sudo tee -a /etc/apt/sources.list.d/foreman.list
{% endhighlight %}
</div>

<div class="quickstart_os quickstart_os_ubuntu2204">
  <p>
    Enable OpenVox's 8.x repository:
  </p>

{% highlight bash %}
sudo apt-get -y install ca-certificates
cd /tmp && wget https://apt.voxpupuli.org/openvox8-release-ubuntu22.04.deb
sudo apt-get install /tmp/openvox8-release-ubuntu22.04.deb
{% endhighlight %}

  <p>Enable the Foreman repositories:</p>

{% highlight bash %}
sudo wget https://deb.theforeman.org/foreman.asc -O /etc/apt/trusted.gpg.d/foreman.asc
echo "deb http://deb.theforeman.org/ jammy {{page.version}}" | sudo tee /etc/apt/sources.list.d/foreman.list
echo "deb http://deb.theforeman.org/ plugins {{page.version}}" | sudo tee -a /etc/apt/sources.list.d/foreman.list
{% endhighlight %}
</div>

<div class="quickstart_os quickstart_os_ubuntu2404">
  <p>
    Enable OpenVox's 8.x repository:
  </p>

{% highlight bash %}
sudo apt-get -y install ca-certificates
cd /tmp && wget https://apt.voxpupuli.org/openvox8-release-ubuntu24.04.deb
sudo apt-get install /tmp/openvox8-release-ubuntu24.04.deb
{% endhighlight %}

  <p>Enable the Foreman repositories:</p>

{% highlight bash %}
sudo wget https://deb.theforeman.org/foreman.asc -O /etc/apt/trusted.gpg.d/foreman.asc
echo "deb http://deb.theforeman.org/ noble {{page.version}}" | sudo tee /etc/apt/sources.list.d/foreman.list
echo "deb http://deb.theforeman.org/ plugins {{page.version}}" | sudo tee -a /etc/apt/sources.list.d/foreman.list
{% endhighlight %}
</div>

#### Downloading the installer

<div class="quickstart_os quickstart_os_none">
  <i>No operating system selected.</i>
</div>

<div class="quickstart_os quickstart_os_el9">
{% highlight bash %}
sudo dnf -y install foreman-installer
{% endhighlight %}
</div>

<div class="quickstart_os quickstart_os_debian12 quickstart_os_debian13 quickstart_os_ubuntu2204 quickstart_os_ubuntu2404">
{% highlight bash %}
sudo apt-get update && sudo apt-get -y install foreman-installer
{% endhighlight %}
</div>

#### Running the installer

<div class="quickstart_os quickstart_os_debian12 quickstart_os_debian13 quickstart_os_ubuntu2204 quickstart_os_ubuntu2404 alert alert-info">
  Ensure that <code>ping $(hostname -f)</code> shows the real IP address, not 127.0.1.1.  Change or remove this entry from /etc/hosts if present.
</div>

The installation run is non-interactive, but the configuration can be customized by supplying any of the options listed in `foreman-installer --help`, or by running `foreman-installer -i` for interactive mode.  More examples are given in the [Installation Options](/manuals/{{page.version}}/index.html#3.2.2InstallerOptions) section.  Adding `-v` will disable the progress bar and display all changes.  To run the installer, execute:

<div class="quickstart_os quickstart_os_none quickstart_os_debian12 quickstart_os_debian13 quickstart_os_ubuntu2204 quickstart_os_ubuntu2404 quickstart_os_el9">
{% highlight bash %}
sudo foreman-installer
{% endhighlight %}
</div>

After it completes, the installer will print some details about where to find Foreman and the Smart Proxy. Output should be similar to this:

{% highlight bash %}
  * Foreman is running at https://theforeman.example.com
      Initial credentials are admin / 3ekw5xtyXCoXxS29
  * Foreman Proxy is running at https://theforeman.example.com:8443
  The full log is at /var/log/foreman-installer/foreman-installer.log
{% endhighlight %}

#### Next-generation documentation

Over the last year, Foreman community members have been open-sourcing Red Hat documentation to make more comprehensive guides available to Foreman users. At the moment, the following guides have been migrated to a work-in-progress [Foreman and Katello documentation site](https://docs.theforeman.org). This project is not yet complete, but you might find useful information in some of the following guides:

* [Provisioning Guide](https://docs.theforeman.org/master/Provisioning_Guide/index-foreman.html)
* [Administering Foreman Guide](https://docs.theforeman.org/master/Administering_Red_Hat_Satellite/index-foreman.html)
* [Managing Hosts Guide](https://docs.theforeman.org/master/Managing_Hosts/index-foreman.html)
* [Content Management Guide](https://docs.theforeman.org/master/Content_Management_Guide/index-foreman.html)
* [Configuring Smart Proxies with a Load Balancer](https://docs.theforeman.org/master/Configuring_Load_Balancer/index-foreman.html)
